@@ -64,15 +64,28 @@
             android:text="@string/value"
             android:layout_width="0dp"
             android:layout_height="wrap_content" 
-            android:layout_alignLeft="@+id/value_text"
-            android:layout_alignRight="@id/value_text"
+            android:layout_alignLeft="@+id/value_sign"
+            android:layout_alignRight="@+id/value_text"
             android:layout_below="@id/executionDate_label"
             android:gravity="center_vertical" />
+    <net.alexjf.tmm.views.SignToggleButton android:id="@id/value_sign"
+            positive="false"
+            android:gravity="center"
+            android:background="@android:color/transparent"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:layout_height="0dp"
+            android:layout_width="40dp"
+            android:layout_alignTop="@id/value_text"
+            android:layout_alignBottom="@id/value_text"
+            android:layout_below="@id/value_label"
+            android:layout_alignParentLeft="true" 
+            android:freezesText="true" />
     <EditText android:id="@id/value_text"
-            android:inputType="number|numberSigned|numberDecimal"
+            android:inputType="number|numberDecimal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_toRightOf="@id/value_sign" 
             android:layout_toLeftOf="@+id/currency_label"
             android:layout_below="@id/value_label" 
             android:singleLine="true" />
