@@ -3,6 +3,9 @@
     <declare-styleable name="SelectorButton">
         <attr name="android:text"/>
     </declare-styleable>
+    <declare-styleable name="SignToggleButton">
+        <attr name="positive" format="boolean" />
+    </declare-styleable>
     <declare-styleable name="URLPreference">
         <attr name="url" format="string" />
     </declare-styleable>
